# lem_in

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c
include/: lem_in.h
src/: algo.c  checker.c  main.c  parsing.c  room.c  utils.c
